[package]
name = "syncopy"
authors = ["volchok <me@aydar.media>"]
description = "Fun & easy system backups to Yandex.Disk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = "2.33.1"
serde_json = "1.0.96"
