[package]
name = "syncopy"
authors = ["volchok <me@aydar.media>"]
description = "Fun & easy system backups to Yandex.Disk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = "2.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5.4"
chrono = "0.4"
toml = "0.8.8"
tar = "0.4"
flate2 = "1"
walkdir = "2"
progress = "0.2.0"
